--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Grammar Rainbow Game</title>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/lobby.css">
+    <link rel="stylesheet" href="css/styles.css?v=1.1">
+    <link rel="stylesheet" href="css/lobby.css?v=1.1">
 </head>
 
-<body>
+<body data-version="1.1">
 
     <!-- Lobby Screen -->
     <div id="lobby-screen" class="lobby-container">
